--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-
+    <button>sad</button>
     
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script> -->
+    <script src="arrays.js"></script>
 </body>
 </html>
