--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button>sad</button>
-    
     <!-- <script src="functions.js"></script> -->
-    <script src="arrays.js"></script>
+    <script src="all.js"></script>
 </body>
 </html>
